samples/_failures_safe/1761605781_99a2d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6aa5914b.c: In function ‘main’:
./samples/SAFE/__tmp_6aa5914b.c:162:55: error: ‘level_to’ undeclared (first use in this function)
  162 |     printf("\nFiltered Log Entries (level >= %s):\n", level_to
      |                                                       ^~~~~~~~
./samples/SAFE/__tmp_6aa5914b.c:162:55: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_6aa5914b.c:162:63: error: expected ‘)’ at end of input
  162 |     printf("\nFiltered Log Entries (level >= %s):\n", level_to
      |           ~                                                   ^
      |                                                               )
./samples/SAFE/__tmp_6aa5914b.c:162:5: error: expected declaration or statement at end of input
  162 |     printf("\nFiltered Log Entries (level >= %s):\n", level_to
      |     ^~~~~~
